<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/appTheme">

    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:neomorph_view_type="rectangular"
        app:neomorph_shadow_type="outer"
        app:neomorph_elevation="9dp"
        android:layout_margin="30dp"
        app:neomorph_layer_type="software"
        app:neomorph_corner_radius="16dp"
        app:neomorph_background_color="@color/white"
        app:neomorph_shadow_color="@color/paleBlack"
        app:neomorph_highlight_color="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_baseline_domain_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/previous_company"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_baseline_arrow_downward_24"
                app:endIconMode="custom"
                app:endIconTint="@color/appTheme"
                app:endIconDrawable="@drawable/ic_baseline_date_range_24">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/doj1"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/date_of_joining"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_baseline_arrow_upward_24"
                app:endIconMode="custom"
                app:endIconTint="@color/appTheme"
                app:endIconDrawable="@drawable/ic_baseline_date_range_24">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/ld1"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/leaving_date"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/designation1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_baseline_desktop_mac_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/designation"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/workingstatus1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/currently_working"
                    app:buttonTint="@color/appTheme"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp" />
                <TextView
                    android:id="@+id/yesorno1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sal1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_baseline_monetization_on_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/salary_in_ctc"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/removebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:backgroundTint="@color/appTheme"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_gravity="end"/>

        </LinearLayout>
    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:neomorph_view_type="rectangular"
        app:neomorph_shadow_type="outer"
        app:neomorph_elevation="9dp"
        app:neomorph_layer_type="software"
        android:layout_marginStart="100dp"
        app:neomorph_corner_radius="16dp"
        app:neomorph_background_color="@color/white"
        app:neomorph_shadow_color="@color/paleBlack"
        app:neomorph_highlight_color="@color/white">



    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

</LinearLayout>